--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "scripts": {
     "build": "node_modules/.bin/rollup -c rollup.config.js",
+    "build-dev": "node_modules/.bin/rollup -c rollup.config.js --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "brett.schellenberg@gmail.com",
