--- a/package.json
+++ b/package.json
@@ -1,31 +1,39 @@
 {
-  "name": "jest-enforce",
-  "version": "1.0.10",
-  "description": "check whether you're mocking what you should",
-  "main": "build/bundle.js",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/pabo/jest-enforce.git"
-  },
+  "name": "@product-marketing/jest-enforce",
+  "version": "1.0.0",
+  "description": "Ensure that your line coverage is not inflated from missing mocked files. ",
+  "main": "index.js",
   "scripts": {
     "build": "node_modules/.bin/rollup -c rollup.config.js",
     "build-clean": "rm -rf node_modules && npm i && node_modules/.bin/rollup -c rollup.config.js",
     "build-dev": "node_modules/.bin/rollup -c rollup.config.js --watch",
+    "dev": "rollup -c -w",
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "brett.schellenberg@gmail.com",
-  "license": "ISC",
-  "dependencies": {
-    "colors": "~1.1.2"
-  },
-  "devDependencies": {
-    "find-in-files": "~0.4.0",
-    "glob": "~7.1.2",
-    "rollup": "~0.50.0",
-    "rollup-plugin-commonjs": "~8.2.5",
-    "rollup-plugin-node-resolve": "~3.0.0"
   },
   "bin": {
     "jest-enforce": "bin/jest-enforce.js"
+  },
+  "author": "James Armenta",
+  "license": "ISC",
+  "dependencies": {
+    "colors": "^1.1.2",
+    "find-root": "^1.1.0",
+    "xml2js": "^0.4.19",
+    "util.promisify": "^1.0.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "eslint": "^4.12.1",
+    "eslint-config-recommended": "^1.5.0",
+    "eslint-plugin-import": "^2.8.0",
+    "rollup": "^0.52.1",
+    "rollup-plugin-babel": "^3.0.3",
+    "rollup-plugin-commonjs": "^8.2.6",
+    "rollup-plugin-node-resolve": "^3.0.2"
+  },
+  "jest-enforce": {
+    "debug": false
   }
 }
