--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
-  "name": "@product-marketing/jest-enforce",
-  "version": "1.0.0",
-  "description": "Ensure that your line coverage is not inflated from missing mocked files. ",
-  "main": "index.js",
+  "name": "jest-enforce",
+  "version": "2.0.0",
+  "description": "Check for inflated coverage due to un-mocked dependencies",
+  "main": "build/bundle.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/pabo/jest-enforce.git"
+  },
   "scripts": {
     "build": "node_modules/.bin/rollup -c rollup.config.js",
     "build-clean": "rm -rf node_modules && npm i && node_modules/.bin/rollup -c rollup.config.js",
@@ -13,7 +17,10 @@
   "bin": {
     "jest-enforce": "bin/jest-enforce.js"
   },
-  "author": "James Armenta",
+  "author": "brett.schellenberg@gmail.com",
+  "contributors": [
+    "James Armenta <armentajames@gmail.com> (http://jamesarmenta.com/)"
+  ],
   "license": "ISC",
   "dependencies": {
     "colors": "^1.1.2",
@@ -32,8 +39,5 @@
     "rollup-plugin-babel": "^3.0.3",
     "rollup-plugin-commonjs": "^8.2.6",
     "rollup-plugin-node-resolve": "^3.0.2"
-  },
-  "jest-enforce": {
-    "debug": false
   }
 }
