--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   "dependencies": {
     "colors": "^1.1.2",
     "find-root": "^1.1.0",
-    "xml2js": "^0.4.19",
-    "util.promisify": "^1.0.0"
+    "lodash.foreach": "^4.5.0",
+    "lodash.has": "^4.5.2",
+    "util.promisify": "^1.0.0",
+    "xml2js": "^0.4.19"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
